--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 # =============================================================================
 # Muzible Muze AI - Requirements
 # =============================================================================
-# Instalacja: pip install -r requirements.txt
+# Installation: pip install -r requirements.txt
 # 
-# ⚠️  WYMAGANE ZALEŻNOŚCI SYSTEMOWE (przed pip install):
+# ⚠️  REQUIRED SYSTEM DEPENDENCIES (before pip install):
 # -----------------------------------------------------------------------------
 # macOS:   brew install espeak-ng ffmpeg
 # Linux:   apt install espeak-ng ffmpeg libsndfile1
-# Windows: Pobierz espeak-ng z https://github.com/espeak-ng/espeak-ng/releases
+# Windows: Download espeak-ng from https://github.com/espeak-ng/espeak-ng/releases
 # -----------------------------------------------------------------------------
-# espeak-ng jest WYMAGANY dla G2P (szczególnie dla polskiego!)
+# espeak-ng is REQUIRED for G2P (especially for Polish!)
 # =============================================================================
 
 # =====================
-# CORE (wymagane)
+# CORE (required)
 # =====================
 torch>=2.0.0
 torchaudio>=2.0.0
@@ -32,7 +32,7 @@ soundfile>=0.12.0
 # =====================
 # TEXT ENCODER (T5/CLAP)
 # =====================
-sentencepiece>=0.1.99      # Wymagane przez T5
+sentencepiece>=0.1.99      # Required by T5
 huggingface-hub>=0.14.0
 
 # =====================
@@ -49,26 +49,26 @@ mutagen>=1.46.0            # MP3 metadata (ID3 tags)
 # =====================
 # TRAINING & MONITORING
 # =====================
-wandb>=0.15.0              # Experiment tracking (opcjonalnie)
+wandb>=0.15.0              # Experiment tracking (optional)
 accelerate>=0.20.0         # Multi-GPU training
 
 # =====================
 # WHISPER (vocal detection & transcription)
 # =====================
-openai-whisper>=20231117   # Oryginalny Whisper (używamy large-v3!)
-# faster-whisper>=0.10.0   # CTranslate2 (szybszy, ale inny API)
+openai-whisper>=20231117   # Original Whisper (we use large-v3!)
+# faster-whisper>=0.10.0   # CTranslate2 (faster, but different API)
 
 # =====================
 # VOICE EMBEDDINGS
 # =====================
-resemblyzer>=0.1.3         # Lżejszy (256-dim) - ZALECANY dla style transfer
-speechbrain>=0.5.15        # Dokładniejszy (192-dim ECAPA-TDNN) - dla voice cloning
+resemblyzer>=0.1.3         # Lighter (256-dim) - RECOMMENDED for style transfer
+speechbrain>=0.5.15        # More accurate (192-dim ECAPA-TDNN) - for voice cloning
 
 # =====================
 # VOCAL SEPARATION (dla voice cloning)
 # =====================
-demucs>=4.0.0              # Facebook htdemucs (najlepszy)
-# spleeter>=2.4.0          # Alternatywa (starszy)
+demucs>=4.0.0              # Facebook htdemucs (best quality)
+# spleeter>=2.4.0          # Alternative (older)
 
 # =====================
 # VOICE CLONING / TTS
@@ -76,11 +76,11 @@ demucs>=4.0.0              # Facebook htdemucs (najlepszy)
 TTS>=0.22.0                # Coqui XTTS v2 (open source)
 
 # =====================
-# G2P - GRAPHEME TO PHONEME (obowiązkowe!)
+# G2P - GRAPHEME TO PHONEME (required!)
 # =====================
-phonemizer>=3.2.0          # Uniwersalny G2P z espeak-ng backend (140+ języków!)
-gruut>=2.2.0               # G2P dla wybranych języków (lepsza jakość)
-# Pakiety językowe Gruut (wszystkie dostępne):
+phonemizer>=3.2.0          # Universal G2P with espeak-ng backend (140+ languages!)
+gruut>=2.2.0               # G2P for selected languages (better quality)
+# Gruut language packages (all available):
 gruut-lang-en>=2.0.0       # English
 gruut-lang-de>=2.0.0       # German  
 gruut-lang-es>=2.0.0       # Spanish
@@ -94,8 +94,8 @@ gruut-lang-ar>=2.0.0       # Arabic
 gruut-lang-fa>=2.0.0       # Farsi/Persian
 gruut-lang-sw>=2.0.0       # Swahili
 gruut-lang-lb>=2.0.0       # Luxembourgish
-# UWAGA: Polski używa phonemizer+espeak-ng (Gruut nie ma polskiego!)
-# Zainstaluj espeak-ng: brew install espeak-ng (macOS) / apt install espeak-ng (Linux)
+# NOTE: Polish uses phonemizer+espeak-ng (Gruut doesn't support Polish!)
+# Install espeak-ng: brew install espeak-ng (macOS) / apt install espeak-ng (Linux)
 
 # =====================
 # CLAP - Audio-Text Embeddings
@@ -105,18 +105,18 @@ gruut-lang-lb>=2.0.0       # Luxembourgish
 # =====================
 # F0/PITCH EXTRACTION (singing voice cloning)
 # =====================
-crepe>=0.0.16              # Deep learning F0 (najdokładniejszy, default)
-# tensorflow lub tensorflow-macos wymagane dla CREPE
-# PYIN jest wbudowany w librosa jako fallback
+crepe>=0.0.16              # Deep learning F0 (most accurate, default)
+# tensorflow or tensorflow-macos required for CREPE
+# PYIN is built into librosa as fallback
 
 # =====================
 # LLM BACKENDS (prompt generation)
 # =====================
 openai>=1.0.0              # GPT-4 / GPT-3.5
 requests>=2.28.0           # Ollama API
-# anthropic>=0.18.0        # Claude (opcjonalnie)
+# anthropic>=0.18.0        # Claude (optional)
 
 # =====================
 # OPTIONAL / ALTERNATIVES
 # =====================
-# openl3>=0.4.1            # Audio embeddings (512-dim) - alternatywa dla resemblyzer
+# openl3>=0.4.1            # Audio embeddings (512-dim) - alternative to resemblyzer
